Generate Random computer move

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    ul.my-list?Lorem ipsum dolor sit amet.
-    Cupiditate nulla maiores quas expedita.
-    Maiores omnis asperiores reiciendis quos?
-    Harum pariatur nesciunt aspernatur? Neque.
-    <p>This is a p</p>
-
+    <p>This is a console based rock paper scissors game. Inpect console to play</p>
+    <a href="https://www.freepik.com/vectors/clip-art">Clip art vector created by DrawingMyDiary - www.freepik.com</a>
 </body>
 </html>
