Add event listeners

--- a/DOMman.html
+++ b/DOMman.html
@@ -12,6 +12,12 @@
     <div id="container">
         <div class="display"></div>
         <div class="controls"></div>
+        <button onclick="alert('Hello World')">Click Me</button>
+        <button id="btn">Click Me</button>
+        <button id="btn3">Click Me Too</button>
+        <button id="1">Click Me</button>
+        <button id="2">Click Me</button>
+        <button id="3">Click Me</button>
       </div>
 </body>
 </html>
