Setup ui skelaton

--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Macondo&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div id="container">
+        <div id="header">
+            <h1>Lets Play</h1>
+        </div>
+        <div id="output">
+            <div id="results">Results</div>
+            <div id="Scores">
+                <h2>Scores</h2>
+                <p>You vs Compputer</p>
+                <h1 class="currentScore">2 - 0</h1>
+                <p>First to five points wins</p>
+                <button>Reset Game</button>
+            </div>
+
+        </div>
+        <div id="controls">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+    </div>
+    
     <p>This is a console based rock paper scissors game. Inpect console to play</p>
     <a href="https://www.freepik.com/vectors/clip-art">Clip art vector created by DrawingMyDiary - www.freepik.com</a>
 </body>
