Add placeholder image

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
             <h1>Lets Play</h1>
         </div>
         <div id="output">
-            <div id="results" class="section">Results</div>
+            <div id="results" class="section">
+                <img src="./images/rock.png" alt="" class="movecard" width="300px">
+                <h2>VS</h2>
+                <img src="./images/scissorsLose.png" alt="" class="movecard" width="300px">
+            </div>
             <div id="scores" class="section">
                 <h2>Scores</h2>
-                <p>You vs Compputer</p>
+                <p>You vs Computer</p>
                 <h1 class="currentScore">2 - 0</h1>
                 <p>First to five points wins</p>
                 <button>Reset Game</button>
@@ -28,9 +32,9 @@
 
         </div>
         <div id="controls"  class="section">
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <img src="./images/rock.png" alt="" class="movecard" width="150px">
+            <img src="./images/paper.png" alt="" class="movecard" width="150px">
+            <img src="./images/scissors.png" alt="" class="movecard" width="150px">
         </div>
         <a href="https://www.freepik.com/vectors/clip-art">Images based on vector art created by DrawingMyDiary - www.freepik.com</a>
     </div>
