Update game results in ui

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         <div id="output">
             <div id="results" class="section">
-                <img src="./images/cardback.png" alt="" class="movecard" width="300px">
+                <img src="./images/cardback.png" alt="" class="movecard userMove" width="300px">
                 <h2>VS</h2>
-                <img src="./images/cardback.png" alt="" class="movecard" width="300px">
+                <img src="./images/cardback.png" alt="" class="movecard computerMove" width="300px">
             </div>
             <div id="scores" class="section">
                 <h2>Score</h2>
@@ -35,11 +35,15 @@
             </div>
 
         </div>
-        <div id="controls"  class="section">
+        <div id="controls"  class="section showSection">
             <img src="./images/rock.png" alt="rock" class="movebutton" width="200px" data-move="rock">
             <img src="./images/paper.png" alt="paper" class="movebutton" width="200px" data-move="paper">
             <img src="./images/scissors.png" alt="scissors" class="movebutton" width="200px" data-move="scissors">
         </div>
+        <div id="finalResult" class="hideSection section">
+            <h2>Game Result</h2>
+        </div>
+
         <a href="https://www.freepik.com/vectors/clip-art">Images based on vector art created by DrawingMyDiary - www.freepik.com</a>
        
     </div>
