After reseting game show blank moves

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </div>
         <div id="output">
             <div id="results" class="section">
-                <img src="./images/cardback.png" alt="" class="movecard userMove" width="300px">
+                <img src="./images/cardback.png" alt="" class="movecard userMove" >
                 <h2>VS</h2>
-                <img src="./images/cardback.png" alt="" class="movecard computerMove" width="300px">
+                <img src="./images/cardback.png" alt="" class="movecard computerMove" >
             </div>
             <div id="scores" class="section">
                 <h2>Score</h2>
                 <div>
-                    <div><span class="fa-solid fa-user scoreIcon"></span></div> <span class="currentScore">2 - 0</span> <span class="fa-solid fa-robot scoreIcon"></span>
+                    <div><span class="fa-solid fa-user scoreIcon"></span></div> <span class="currentScore">0 - 0</span> <span class="fa-solid fa-robot scoreIcon"></span>
                 </div>
                 
                 <p>First to five points wins</p>
